# AI-Legal-Assistant

./: .gitignore  Plan.html  README.md  create_milvus_collections.py  create_milvus_collections_oai.py  ingest_to_milvus.py  pyproject.toml
configs/: legal_multi_agent.yml  legal_multi_agent_eval.yml  legal_multi_agent_gemma2-9b.yml  legal_multi_agent_nemotron.yml  legal_multi_agent_no_websearch.yml  legal_multi_agent_qwen3_8b.yml  legal_multi_agent_ttc.yml  legal_multi_agent_ttc_UNUPDATED.yml
data/eval/: Legal_agent.json
data/vbqp/: 168_2024_ND-CP.docx  168_2024_ND-CP_m_619502.doc
deploy/: docker-compose-utils.yaml  docker-compose.yaml
