[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
# Để root là chính repo hiện tại (có .git)
root = "."
# Thêm fallback để không cần tag vẫn build được
fallback_version = "0.1.dev0"
# Mở rộng describe để thấy cả lightweight tags
git_describe_command = "git describe --long --first-parent --tags"

[project]
name = "nat_simple_rag"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[ingestion,langchain,mem0ai]~=1.3",
  "nvidia-nat[telemetry]~=1.3"
]
requires-python = ">=3.11,<3.13"
description = "Simple NeMo Agent toolkit Rag example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../NeMo-Agent-Toolkit/", editable = true }
