[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
# Để root là chính repo hiện tại (có .git)
root = "."
# Thêm fallback để không cần tag vẫn build được
fallback_version = "0.1.dev0"
# Mở rộng describe để thấy cả lightweight tags
git_describe_command = "git describe --long --first-parent --tags"

[[tool.uv.index]]
url = "https://wheels.vllm.ai/75531a6c134282f940c86461b3c40996b4136793"

[project]
name = "nat_simple_rag"
dynamic = ["version"]
dependencies = [
  "markitdown[all]>=0.1.3",
  "matplotlib>=3.10.6",
  "nvidia-nat[ingestion,langchain,mem0ai]~=1.3",
  "nvidia-nat[telemetry]~=1.3",
  "openai>=1.102.0",
  "pymilvus>=2.6.1",
  "tiktoken>=0.11.0",
  "triton>=3.3.1",
  "vllm==0.10.1.dev666+g75531a6c1",
]
requires-python = ">=3.11,<3.13"
description = "Simple NeMo Agent toolkit Rag example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../NeMo-Agent-Toolkit/", editable = true }
